# ktranslate

./: AUTHORS  ChangeLog  Doxyfile  Makefile.cvs  Makefile.in  acinclude.m4  config_info  configure  configure.in  contributors.txt  ktranslate.kdevelop  ktranslate.kdevelop.pcs  ktranslate.kdevses  subdirs
admin/: Makefile  Makefile.in  am_edit  cvs.sh
debian/: .rules.swp  README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  ktranslate-default.ex  ktranslate-doc.docs  ktranslate.doc-base.EX  ktranslate.substvars  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
doc/: Makefile.am  Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
icons/: Makefile.am  Makefile.in
lib/: Makefile.am  Makefile.in  ktranenelement.cpp  ktranenelement.h  ktranslatedata.cpp  ktranslatedata.h  ktranslateio.cpp  ktranslateio.h  separators.h
po/: Makefile.in
src/: ExportDialogBase.ui  Makefile.am  Makefile.in  addworddialog.cpp  addworddialog.h  addworddialogbase.ui  centralview.cpp  centralview.h  centralviewbase.ui  dictionary.zdf  dictionary_elGR.zdf  dictionary_utf8.zdf  editworddialog.cpp  editworddialog.h  editworddialogbase.ui  exportdialog.cpp  exportdialog.h  images.h  ktranslate.cpp  ktranslate.desktop  ktranslate.h  ktranslate_part.cpp  ktranslate_part.desktop  ktranslate_part.h  ktranslate_part.rc  ktranslate_pref.cpp  ktranslate_pref.h  ktranslate_shell.rc  main.cpp
templates/: h
